route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: elimage
  name: elimage
spec:
  port:
    targetPort: 8888-tcp
  to:
    kind: Service
    name: elimage
    weight: 100
  wildcardPolicy: None
